Add support for g[u]intptr in scanner and girwriter.

https://bugzilla.gnome.org/show_bug.cgi?id=634838